--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.9"
+    "@babel/runtime": "^7.17.9",
+    "matrix-widget-api": "^1.1.1"
   }
 }
