--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-matrix-org": "^0.4.0",
     "jest": "^27.5.1",
-    "react": "17.0.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9"
+  },
+  "peerDependencies": {
+    "react": "17.0.2"
   }
 }
