--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,68 +8,45 @@ jobs:
   # Global
   # ================================================
 
-  eslint-16:
-    name: 'ESLint Node 16'
+  eslint:
+    name: "ESLint (Node ${{ matrix.node }})"
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [18, latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: ${{ matrix.node }}
       - run: yarn install
       - run: yarn lint
 
-  # Node 16
-  # ================================================
-
-  build-16:
-    name: 'Build Node 16'
+  build:
+    name: "Build (Node ${{ matrix.node }})"
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [18, latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: ${{ matrix.node }}
       - run: yarn install
       - run: yarn build
 
-  tests-16:
-    name: 'Tests Node 16'
+  tests:
+    name: "Tests (Node ${{ matrix.node }})"
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [18, latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
-      - run: yarn install
-      - uses: nick-invision/retry@v2
-        with:
-          max_attempts: 5
-          timeout_minutes: 5
-          command: yarn test
-
-  # Node 14
-  # ================================================
-
-  build-14:
-    name: 'Build Node 14'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - run: yarn install
-      - run: yarn build
-
-  tests-14:
-    name: 'Tests Node 14'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+          node-version: ${{ matrix.node }}
       - run: yarn install
       - uses: nick-invision/retry@v2
         with:
