Apply prettier formatting
Signed-off-by: Dominik Henneke <dominik.henneke@nordeck.net>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
             - name: 🔧 Set up node environment
               uses: actions/setup-node@v3
               with:
-                  cache: 'yarn'
+                  cache: "yarn"
 
             - name: 🛠️ Setup
               run: yarn install --pure-lockfile
