--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,17 +1,14 @@
 {
-  "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "rootDir": "./src",
-    "sourceMap": true,
-    "noEmit": false,
-    "module": "commonjs",
-    "emitDecoratorMetadata": true,
-    "declaration": true,
-    "outDir": "./lib",
-    "jsx": "react"
-  },
-  "include": [
-    "./src/**/*.ts",
-    "./src/**/*.tsx"
-  ]
+    "extends": "./tsconfig.json",
+    "compilerOptions": {
+        "rootDir": "./src",
+        "sourceMap": true,
+        "noEmit": false,
+        "module": "commonjs",
+        "emitDecoratorMetadata": true,
+        "declaration": true,
+        "outDir": "./lib",
+        "jsx": "react"
+    },
+    "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
