--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,14 @@
 {
-  "compilerOptions": {
-    "target": "es2016",
-    "experimentalDecorators": true,
-    "esModuleInterop": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "declaration": false,
-    "noEmit": true,
-    "jsx": "react",
-    "strict": true
-  },
-  "include": [
-    "./src/**/*.ts",
-    "./src/**/*.tsx",
-    "./test/**/*.ts"
-  ]
+    "compilerOptions": {
+        "target": "es2016",
+        "experimentalDecorators": true,
+        "esModuleInterop": true,
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "declaration": false,
+        "noEmit": true,
+        "jsx": "react",
+        "strict": true
+    },
+    "include": ["./src/**/*.ts", "./src/**/*.tsx", "./test/**/*.ts"]
 }
