--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,11 @@ jobs:
             matrix:
                 node: [18, latest]
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v2
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node }}
+                  cache: "yarn"
             - run: yarn install
             - run: yarn lint
 
@@ -29,10 +30,11 @@ jobs:
             matrix:
                 node: [18, latest]
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v2
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node }}
+                  cache: "yarn"
             - run: yarn install
             - run: yarn build
 
@@ -43,10 +45,11 @@ jobs:
             matrix:
                 node: [18, latest]
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v2
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node }}
+                  cache: "yarn"
             - run: yarn install
             - uses: nick-invision/retry@v2
               with:
