--- a/package.json
+++ b/package.json
@@ -43,15 +43,16 @@
         "@typescript-eslint/eslint-plugin": "^5.18.0",
         "@typescript-eslint/parser": "^5.18.0",
         "eslint": "^8.12.0",
-        "eslint-config-prettier": "^8.5.0",
         "eslint-config-google": "^0.14.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-matrix-org": "^0.9.0",
         "eslint-plugin-unicorn": "^47.0.0",
         "jest": "^27.5.1",
+        "matrix-web-i18n": "^3.1.1",
+        "prettier": "2.8.8",
         "react": "17.0.2",
         "react-dom": "^17.0.2",
-        "prettier": "2.8.8",
         "rimraf": "^3.0.2",
         "ts-jest": "^27.1.4",
         "typescript": "^4.6.3"
