Set up CI to lint workflows with action-validator

--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
         "build:compile": "babel -d lib --verbose --extensions \".ts,.tsx\" src",
         "start": "tsc -p ./tsconfig.build.json -w",
         "test": "jest",
-        "lint": "eslint src test && tsc --noEmit && prettier --check .",
-        "lint:fix": "prettier --write . && eslint --fix src test",
+        "lint": "yarn lint:js && yarn lint:workflows",
+        "lint:js": "eslint src test && tsc --noEmit && prettier --check .",
+        "lint:js-fix": "prettier --write . && eslint --fix src test",
+        "lint:workflows": "find .github/workflows -type f \\( -iname '*.yaml' -o -iname '*.yml' \\) | xargs -I {} sh -c 'echo \"Linting {}\"; action-validator \"{}\"'",
         "prepublishOnly": "yarn build"
     },
     "devDependencies": {
+        "@action-validator/cli": "^0.5.3",
+        "@action-validator/core": "^0.5.3",
         "@babel/cli": "^7.17.6",
         "@babel/core": "^7.17.8",
         "@babel/eslint-parser": "^7.17.0",
