--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,23 @@ jobs:
                   node-version: ${{ matrix.node }}
                   cache: "yarn"
             - run: yarn install
-            - run: yarn lint
+            - run: yarn lint:js
+
+    workflow_lint:
+        name: "Workflow Lint"
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+
+            - uses: actions/setup-node@v4
+              with:
+                  cache: "yarn"
+
+            - name: Install Deps
+              run: "yarn install --frozen-lockfile"
+
+            - name: Run Linter
+              run: "yarn lint:workflows"
 
     build:
         name: "Build (Node ${{ matrix.node }})"
