--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,14 @@ jobs:
     # ================================================
 
     eslint:
-        name: "ESLint (Node ${{ matrix.node }})"
+        name: "ESLint (Node ${{ matrix.node == '*' && 'latest' || matrix.node }})"
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                node: [18, latest]
+                node: [18, *]
         steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node }}
                   cache: "yarn"
@@ -40,14 +40,14 @@ jobs:
               run: "yarn lint:workflows"
 
     build:
-        name: "Build (Node ${{ matrix.node }})"
+        name: "Build (Node ${{ matrix.node == '*' && 'latest' || matrix.node }})"
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                node: [18, latest]
+                node: [18, *]
         steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node }}
                   cache: "yarn"
@@ -55,14 +55,14 @@ jobs:
             - run: yarn build
 
     tests:
-        name: "Tests (Node ${{ matrix.node }})"
+        name: "Tests (Node ${{ matrix.node == '*' && 'latest' || matrix.node }})"
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                node: [18, latest]
+                node: [18, *]
         steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node }}
                   cache: "yarn"
