--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     # ================================================
 
     eslint:
-        name: "ESLint (Node ${{ matrix.node == '*' && 'latest' || matrix.node }})"
+        name: "ESLint (Node ${{ matrix.node }})"
         runs-on: ubuntu-latest
         strategy:
             matrix:
@@ -22,6 +22,17 @@ jobs:
                   cache: "yarn"
             - run: yarn install
             - run: yarn lint:js
+
+    ts_lint:
+        name: "Typescript Syntax Check"
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                  cache: "yarn"
+            - run: yarn install
+            - run: yarn lint:types
 
     workflow_lint:
         name: "Workflow Lint"
