--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -1,12 +1,13 @@
 name: Sync labels
 on:
     workflow_dispatch: {}
-    # Disabled for now while we're testing
-    # push:
-    #     branches:
-    #         - develop
-    #     paths:
-    #         - .github/labels.yml
+    schedule:
+        - cron: "0 2 * * *" # 2am every day
+    push:
+        branches:
+            - develop
+        paths:
+            - .github/labels.yml
 jobs:
     sync-labels:
         uses: vector-im/element-meta/.github/workflows/sync-labels.yml@develop
