--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -13,7 +13,7 @@ jobs:
         uses: vector-im/element-meta/.github/workflows/sync-labels.yml@develop
         with:
             LABELS: |
-                vector-im/element-meta
+                vector-im/element-web
                 .github/labels.yml
             DELETE: true
             WET: true
