--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@matrix-org/react-sdk-module-api",
-    "version": "2.3.0-wr-taj-7",
+    "version": "2.3.0-wr-taj-14",
     "description": "Module API surface for matrix-react-sdk",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -54,7 +54,6 @@
         "eslint-plugin-matrix-org": "^0.9.0",
         "eslint-plugin-unicorn": "^47.0.0",
         "jest": "^27.5.1",
-        "matrix-web-i18n": "^3.1.1",
         "prettier": "2.8.8",
         "react": "17.0.2",
         "react-dom": "^17.0.2",
@@ -63,7 +62,8 @@
         "typescript": "^4.6.3"
     },
     "dependencies": {
-        "@babel/runtime": "^7.17.9"
+        "@babel/runtime": "^7.17.9",
+        "matrix-web-i18n": "^3.1.5"
     },
     "peerDependencies": {
         "react": "^17.0.2"
