--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
         "jest": "^27.5.1",
         "matrix-web-i18n": "^3.1.1",
         "prettier": "2.8.8",
-        "react": "17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18",
+        "react-dom": "^18",
         "rimraf": "^3.0.2",
         "ts-jest": "^27.1.4",
         "typescript": "^4.6.3"
@@ -66,6 +66,6 @@
         "@babel/runtime": "^7.17.9"
     },
     "peerDependencies": {
-        "react": "^17.0.2"
+        "react": "^18"
     }
 }
